[gd_scene format=3 uid="uid://lobby001"]

[ext_resource type="Script" path="res://scripts/lobby.gd" id="1"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "TankShark Multiplayer"
horizontal_alignment = 1

[node name="ConnectionRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AddressInput" type="LineEdit" parent="VBoxContainer/ConnectionRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "127.0.0.1"

[node name="PortInput" type="SpinBox" parent="VBoxContainer/ConnectionRow"]
layout_mode = 2
min_value = 1024.0
max_value = 65535.0
value = 9999.0

[node name="ButtonRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HostBtn" type="Button" parent="VBoxContainer/ButtonRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host Game"

[node name="JoinBtn" type="Button" parent="VBoxContainer/ButtonRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join Game"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Enter address and host or join."
horizontal_alignment = 1

[node name="PlayerList" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StartBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"
